# rag-evaluation-observability

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ROADMAP.md  START_HERE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: documents.json  qa.json
docs/: architecture.md  git-push-plan.md  results.md
scripts/: compare.py
src/rag_eval/: api.py  config.py  evaluator.py  llm.py  metrics.py  pipeline.py  retrieval.py  store.py
tests/: conftest.py  test_api.py  test_bedrock.py  test_rag.py  test_store.py
