[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-evaluation-observability"
version = "0.2.0"
description = "Bedrock-backed RAG generation, retrieval comparison, LLM-as-judge evaluation, and persistent run observability."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "scikit-learn>=1.5,<2",
    "numpy>=1.26,<3",
    "boto3>=1.35,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6,<7",
    "httpx>=0.27,<1",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1 --cov=rag_eval --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
